cabal-version:      3.0
name:               dist-systems
version:            0.1.0.0
synopsis:           Distributed systems challenges in Haskell
-- description:
license:            MIT
license-file:       LICENSE
author:             papagvas
maintainer:         papagvas@proton.me
-- copyright:
category:           Network
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

common extensions
    default-extensions: OverloadedStrings
                      , OverloadedLabels
                      , ImportQualifiedPost
                      , RecordWildCards
                      , TypeApplications
library
    import:           warnings
          ,           extensions
    exposed-modules:  Protocol
                   ,  Node
    -- other-modules:
    -- other-extensions:
    build-depends:    base ^>=4.17.2.0
                 ,    bytestring
                 ,    text
                 ,    aeson
                 ,    microlens
                 ,    generic-lens
    hs-source-dirs:   src
    default-language: Haskell2010

executable echo
    import:           warnings
          ,           extensions
    main-is:          Main.hs
    -- other-modules:
    -- other-extensions:
    build-depends:
        base ^>=4.17.2.0,
        dist-systems,
        bytestring

    hs-source-dirs:   apps/echo
    default-language: Haskell2010
